--- a/docs/versioned_docs/version-1.19.0/installation.mdx
+++ b/docs/versioned_docs/version-1.19.0/installation.mdx
@@ -91,6 +91,12 @@ export default function App() {
 
 Congratulations! 🎉 You've just finished installation process. Go to the [next section](./guides/first-animation.md) to get more insights of what you can do using this library. 😎
 
+:::warning Flickering keyboard on app start
+`KeyboardProvider` preloads the keyboard when the app starts to avoid an initial delay later. However, in some situations, this may cause the keyboard to [briefly appear](https://github.com/kirillzyusko/react-native-keyboard-controller/issues/1077) on launch.
+
+To prevent this, disable preloading by setting the [`preload={false}`](./api/keyboard-provider#preload-) prop on `KeyboardProvider`. And don't forget to manually [`preload`](./api/keyboard-controller#preload-) the keyboard later via `KeyboardController` when appropriate.
+:::
+
 :::danger Troubleshooting guide
 If you encounter some issues make sure to read the [Troubleshooting](./troubleshooting.md) section.
 :::
