docs: add "accessory" algolia keyword

--- a/docs/docs/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/docs/api/components/keyboard-sticky-view/index.mdx
@@ -16,6 +16,10 @@ keywords:
 
 # KeyboardStickyView
 
+{/* Hidden keywords for Algolia */}
+
+<div style={{ display: "none" }}>keyboard accessory KeyboardAccessoryView</div>
+
 A `KeyboardStickyView` component seamlessly ensures that a designated view sticks to the keyboard's movements, maintaining visibility and interaction. Use it when you want to enhance the user experience by preventing important UI elements from being obscured by the keyboard, creating a smooth and user-friendly interface in your React Native application.
 
 :::info `KeyboardAvoidingView` vs `KeyboardStickyView`
