chore: temp commit

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -244,6 +244,14 @@ export function Example() {
 }
 ```
 
+## Methods
+
+### `assureFocusedInputVisible`
+
+A method that assures that focused input is visible and not obscured by keyboard or other elements.
+
+You may want to call it, when layout inside `ScrollView` changes (for example validation message appears or disappears and it shifts position of focused input).
+
 ## Example
 
 ```tsx
