docs: library version 1.18 still not compatible with Expo snacks, so let's not mark this version as a compatible one

--- a/docs/versioned_docs/version-1.18.0/installation.mdx
+++ b/docs/versioned_docs/version-1.18.0/installation.mdx
@@ -44,6 +44,10 @@ npm install react-native-keyboard-controller --save
 npx expo install react-native-keyboard-controller
 ```
 
+:::note Only Expo Dev client compatible
+This library has native code, so it **does not work** with _Expo Go_ but it's fully compatible with [custom dev client](https://docs.expo.dev/development/getting-started/).
+:::
+
 </TabItem>
 </Tabs>
 
