docs: documentation scratches

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -6,6 +6,7 @@ keywords:
     keyboard aware view,
     aware scroll view,
   ]
+description: ScrollView that effortlessly handles keyboard appearance, automatically scrolls to focused TextInput and provides a native-like performance
 ---
 
 # KeyboardAwareScrollView
