docs: describe API (as sketch page)

--- a/docs/docs/api/components/chat-kit.mdx
+++ b/docs/docs/api/components/chat-kit.mdx
@@ -1,3 +1,46 @@
 # ChatKit
 
 `ChatKit` is a specialized component designed to simplify the process of building chat application layouts that handle keyboard interactions seamlessly. It addresses common challenges faced when developing chat apps, such as managing keyboard appearance, interactive dismissal, and ensuring smooth animations.
+
+TODO: add tutorial integartion with Flat/Flash/LegendList
+
+## Props
+
+### [`ScrollView Props`](https://reactnative.dev/docs/scrollview#props)
+
+Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
+
+### `ScrollViewComponent`
+
+Custom component that will be used as a `ScrollView`. Default is `ScrollView`.
+
+:::tip When to use it?
+If you want to use `ScrollView` from `react-native-gesture-handler` you can pass it as a `ScrollViewComponent` prop.
+
+```tsx
+import { ScrollView } from "react-native-gesture-handler";
+
+<KeyboardAwareScrollView ScrollViewComponent={ScrollView} />;
+```
+
+:::
+
+### `freeze`
+
+### `inverted`
+
+### `keyboardLiftBehavior`
+
+#### `always`
+
+#### `whenAtEnd`
+
+#### `persistent`
+
+#### `never`
+
+## Example
+
+```tsx
+
+```
