--- a/docs/docs/api/components/chat-kit.mdx
+++ b/docs/docs/api/components/chat-kit.mdx
@@ -1,6 +1,6 @@
 # ChatKit
 
-`ChatKit` is a specialized component designed to simplify the process of building chat application layouts that handle keyboard interactions seamlessly. It addresses common challenges faced when developing chat apps, such as managing keyboard appearance, interactive dismissal, and ensuring smooth animations.
+`ChatKit` is a purpose-built component for chat application layouts. It handles keyboard appearance, interactive dismissal, and content repositioning with smooth 60/120 FPS animations — all the keyboard behaviors that chat apps need but general-purpose components struggle to deliver.
 
 import Video from "@site/src/components/Video";
 
@@ -8,7 +8,7 @@ import Video from "@site/src/components/Video";
 
 ### [`ScrollView Props`](https://reactnative.dev/docs/scrollview#props)
 
-Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
+Inherits all [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
 
 ### `ScrollViewComponent`
 
@@ -20,50 +20,60 @@ If you want to use `ScrollView` from `react-native-gesture-handler` you can pass
 ```tsx
 import { ScrollView } from "react-native-gesture-handler";
 
-<KeyboardAwareScrollView ScrollViewComponent={ScrollView} />;
+<ChatKit.ScrollView ScrollViewComponent={ScrollView} />;
 ```
 
 :::
 
 ### `freeze`
 
+When `true`, freezes all keyboard-driven layout changes. This is useful when dismissing the keyboard to show a custom input view (such as an emoji picker or bottom sheet) — it prevents the chat content from shifting while the transition happens.
+
 ### `inverted`
 
-:::danger Android interop with `keyboardLiftBehavior`
-On Android if you pass `inverted={true}` then the only supported mode for `keyboardLiftBehavior` will be `always`
+Set to `true` if your list uses the `inverted` prop (the standard pattern for chat-style lists where the newest messages appear at the bottom).
+
+:::danger Android limitation
+On Android, inverted lists only support `keyboardLiftBehavior="always"`. Other modes are not available when `inverted={true}`.
 :::
 
 ### `keyboardLiftBehavior`
 
+Controls how the chat content responds when the keyboard appears. Defaults to `"always"`.
+
 #### `always`
 
-The content always lifts along with the keyboard, ensuring the messages from the bottom part of screen remain visible **regardless** of the current scroll position. This is the default behavior for most chat applications (used in **Telegram**, **WhatsApp**, etc.).
+Content always lifts with the keyboard, keeping the bottom messages visible **regardless** of the current scroll position. This is the most common chat app behavior, used by **Telegram**, **WhatsApp**, and others.
 
 <Video src="/video/chat-kit/always.mov" width={35} />
 
 #### `whenAtEnd`
 
-The content lifts only if the scroll view is **at the end** (i. e. the last message is visible or near the bottom). This prevents unnecessary adjustments when the user is scrolling through older messages (**ChatGPT** mobile app behavior).
+Content lifts only when the scroll view is **at the end** (i.e., the last message is visible or near the bottom). If the user has scrolled up to read older messages, the keyboard won't push the content around. This matches the **ChatGPT** mobile app behavior.
 
 <Video src="/video/chat-kit/when-at-end.mov" width={35} />
 
 #### `persistent`
 
+Content lifts when the keyboard appears, but **does not drop back** when the keyboard hides. The scroll position stays where it was pushed to. This matches the **Claude** mobile app behavior.
+
 #### `never`
+
+Content never moves in response to the keyboard. The keyboard simply overlaps the chat. This matches the **Perplexity** app behavior.
 
 <Video src="/video/chat-kit/never.mov" width={35} />
 
-## Usage with Virtualized lists
+### `offset`
 
-This library doesn't expose direct integration with virtualized list third party libraries. But since all these libs are based on `ScrollView` usage you can easily build this integration yourself:
+## Usage with virtualized lists
+
+`ChatKit` doesn't ship with built-in wrappers for third-party virtualized list libraries, but since all of them (`FlatList`, `FlashList`, `LegendList`) accept a custom scroll component, integration is straightforward.
+
+First, create a wrapper component:
 
 ```tsx title="VirtualizedListScrollView.tsx"
-import { forwardRef, useMemo } from "react";
+import { forwardRef } from "react";
 import { ChatKit } from "react-native-keyboard-controller";
-import { useSafeAreaInsets } from "react-native-safe-area-context";
-
-import { useChatConfigStore } from "./store";
-import { MARGIN, TEXT_INPUT_HEIGHT } from "./styles";
 
 import type { ScrollViewProps } from "react-native";
 
@@ -81,7 +91,7 @@ const VirtualizedListScrollView = forwardRef((props: ScrollViewProps, ref) => {
 export default VirtualizedListScrollView;
 ```
 
-And then use it:
+Then pass it to your list via `renderScrollComponent`:
 
 ```tsx title="FlashList"
 <FlashList
@@ -123,3 +133,9 @@ TODO: put a snack here?
 ```tsx
 
 ```
+
+## Known issues
+
+TODO: put a real link here
+
+- [react-native-reanimated#5567](https://github.com/software-mansion/react-native-reanimated/issues/5567): Android has undesired "bounce" animation effect on Fabric architecture
