docs: add snack to example page so that it's interactive

--- a/docs/docs/api/components/chat-kit.mdx
+++ b/docs/docs/api/components/chat-kit.mdx
@@ -128,11 +128,24 @@ const memoList = useCallback(
 
 ## Example
 
-TODO: put a snack here?
+<div
+  data-snack-id="@kirylziusko/chatkit"
+  data-snack-platform="ios"
+  data-snack-preview="true"
+  data-snack-theme="light"
+  style={{
+    overflow: "hidden",
+    background: "#fbfcfd",
+    border: "1px solid var(--color-border)",
+    borderRadius: 4,
+    height: 505,
+    width: "100%",
+  }}
+></div>
 
-```tsx
-
-```
+<Head>
+  <script src="https://snack.expo.dev/embed.js" async />
+</Head>
 
 ## Known issues
 
