docs: replace assets

--- a/docs/docs/api/components/chat-kit.mdx
+++ b/docs/docs/api/components/chat-kit.mdx
@@ -57,7 +57,7 @@ Content lifts only when the scroll view is **at the end** (i.e., the last messag
 
 Content lifts when the keyboard appears, but **does not drop back** when the keyboard hides. The scroll position stays where it was pushed to. This matches the **Claude** mobile app behavior.
 
-<Video src="/video/chat-kit/persistent.mov" width={25} />
+<Video src="/video/chat-kit/persistent.mp4" width={25} />
 
 #### `never`
 
