--- a/docs/docs/guides/components-overview.mdx
+++ b/docs/docs/guides/components-overview.mdx
@@ -29,7 +29,7 @@ keywords:
 This guide provides a concise overview of the main UI components in `react-native-keyboard-controller`. Choose the right component to handle keyboard interactions smoothly and consistently across platforms.
 
 :::info Building a chat app?
-If you are building a chat application, check out the dedicated [guide](./building-chat-app) guide that explores pitfalls of building chat app layout and shows how to solve them using `ChatKit` component.
+If you are building a chat application, check out the dedicated [guide](./building-chat-app) guide that explores pitfalls of building chat app layout and shows how to solve them using `KeyboardChatScrollView` component.
 :::
 
 ## [`KeyboardAvoidingView`](../api/components/keyboard-avoiding-view)
