--- a/docs/docs/api/components/keyboard-chat-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-chat-scroll-view.mdx
@@ -1,8 +1,10 @@
 # KeyboardChatScrollView
 
-`KeyboardChatScrollView` is a purpose-built component for chat application layouts. It handles keyboard appearance, interactive dismissal, and content repositioning with smooth 60/120 FPS animations — all the keyboard behaviors that chat apps need but general-purpose components struggle to deliver.
+`KeyboardChatScrollView` is a purpose-built component for chat application layouts. It handles keyboard appearance, interactive dismissal, and content repositioning with smooth 60/120 FPS animations — all the keyboard behaviors that chat apps need, but general-purpose components **_struggle_** to deliver.
 
 import Video from "@site/src/components/Video";
+
+<Video src="/video/keyboard-chat-scroll-view/always.mov" width={35} />
 
 ## Props
 
@@ -45,25 +47,25 @@ Controls how the chat content responds when the keyboard appears. Defaults to `"
 
 Content always lifts with the keyboard, keeping the bottom messages visible **regardless** of the current scroll position. This is the most common chat app behavior, used by **Telegram**, **WhatsApp**, and others.
 
-<Video src="/video/chat-kit/always.mov" width={25} />
+<Video src="/video/keyboard-chat-scroll-view/always.mov" width={25} />
 
 #### `whenAtEnd`
 
 Content lifts only when the scroll view is **at the end** (i.e., the last message is visible or near the bottom). If the user has scrolled up to read older messages, the keyboard won't push the content around. This matches the **ChatGPT** mobile app behavior.
 
-<Video src="/video/chat-kit/when-at-end.mov" width={25} />
+<Video src="/video/keyboard-chat-scroll-view/when-at-end.mov" width={25} />
 
 #### `persistent`
 
 Content lifts when the keyboard appears, but **does not drop back** when the keyboard hides. The scroll position stays where it was pushed to. This matches the **Claude** mobile app behavior.
 
-<Video src="/video/chat-kit/persistent.mp4" width={25} />
+<Video src="/video/keyboard-chat-scroll-view/persistent.mp4" width={25} />
 
 #### `never`
 
 Content never moves in response to the keyboard. The keyboard simply overlaps the chat. This matches the **Perplexity** app behavior.
 
-<Video src="/video/chat-kit/never.mov" width={25} />
+<Video src="/video/keyboard-chat-scroll-view/never.mov" width={25} />
 
 ### `offset`
 
@@ -135,7 +137,7 @@ const memoList = useCallback(
 ## Example
 
 <div
-  data-snack-id="@kirylziusko/chatkit"
+  data-snack-id="@kirylziusko/c0b7f0"
   data-snack-platform="ios"
   data-snack-preview="true"
   data-snack-theme="light"
